[project]
name = "root"
version = "0.0.1"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "How to scale collaboration"
dependencies = [
    "ensure @ git+https://github.com/notarealdeveloper/ensure",
    "wnix   @ git+https://github.com/notarealdeveloper/wnix",
]

[project.urls]
"Homepage" = "https://github.com/notarealdeveloper/root"
